# github_rename_utils

./: .gitignore  CODEOWNERS  Makefile  README.md  pyproject.toml
docs/: Makefile  process_flow.dot
examples/: branch_rename.py  repo_get_branch_protection.py  repo_rename.py  repo_shared_ownership.py  restful_report.py  shared_ownership_report.py  team_progress_report.py  team_repos_report.py
github_rename_utils/: branch_rename.py  branch_rename_utils.py  collection.py  github_graphql_api.py  github_graphql_wrapper.py  github_rate_limit.py  github_requests.py  github_rest_api.py  github_wrapper.py  graphql_utils.py  rate_limit.py  rename.py  rename_utils.py  report.py  report_utils.py  rest_report_utils.py  shared_ownership.py  shared_ownership_report.py  shared_ownership_report_utils.py  shared_ownership_utils.py  team_repo_report.py  team_repo_report_utils.py
tests/: example_query.gql  example_query_variables.json  expected_queries.py  mock_graphql_payloads.py  mock_graphql_queries.py  mock_payloads.py  mock_rest_payloads.py  ref_old_tests.py  test_branch_rename.py  test_branch_rename_utils.py  test_collection.py  test_example_restful_report.py  test_github_graphql_api.py  test_github_rate_limit.py  test_github_rename_utils.py  test_github_report_utils.py  test_github_rest_api.py  test_package_version.py  test_rate_limit.py  test_rename.py  test_rename_utils.py  test_repo_data.py  test_repo_ownership.py  test_report_utils_graphql.py  test_report_utils_rest.py  test_rest_report_utils.py  test_shared_ownership.py  test_shared_ownership_report.py  (+4 more)
(+2 files in other folders)
